# python-project-template

./: README.md  pyproject.toml
.github/workflows/: code-checkers.yml  format.yml  release.yml  requirements-check.yml  zizmor.yml
