[project]
name = "python-project-template"
description = "Change me"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = "~=3.11"
dynamic = ["version"]
dependencies = [
]

[dependency-groups]
dev = [
  "icecream",
  "mypy",
  "flake8",
  "pydocstyle",
  "pyright",
  "ruff",
  "typing-extensions",
]

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
preview = true
line-length = 120
exclude = [".git"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "I",  # isort
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
]
# don't use some of the SIM rules
ignore = [
  "SIM105",  # suppressible-exception
  "SIM108",  # if-else-block-instead-of-if-exp
]

[tool.ruff.lint.isort]
lines-after-imports = 1
